template engine: ModelAndView that is not a Map - Allow to use anything as Model - Remove `put()` methods from ModelAndView - Introduce `MapModelAndView` - Replace `new ModelAndView(String, Map)` by `ModelAndView.map()` - fix #3113